--- a/src/views/games/show.ejs
+++ b/src/views/games/show.ejs
@@ -85,7 +85,11 @@
                                             <title>Placeholder</title>
                                             <rect width="100%" height="100%" fill="<%=color%>"></rect><text x="40%"
                                                 y="50%" fill="<%=text%>" dy=".3em" style="height: 140px;">
-                                                <%- Math.round(game.rating) %>%
+                                                <% if (Math.round(game.rating)) {%>
+                                                    <%- Math.round(game.rating) %>%
+                                                        <% } else { %>
+                                                            N/A
+                                                            <% } %>
                                             </text>
                                         </svg>
                                     </div>
