feat: admin can check all users reviews in an individual page

--- a/src/views/users/admin.ejs
+++ b/src/views/users/admin.ejs
@@ -37,7 +37,7 @@
                                         <a href="/profiles/<%=user.id%>/favorites" class="delete">Favorites</a>
                                     </td>
                                     <td>
-                                        <a href="/profiles/<%=user.id%>/reviews" class="delete">Reviews</a>
+                                        <a href="/admin/<%=user.id%>/reviews" class="delete">Reviews</a>
                                     </td>
                                     <td>
                                         <a href="/profiles/<%=user.id%>/edit" class="delete">Edit</a>
